--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  background: #0b2845; /* CHANGÉ : Fond bleu foncé pour tout le corps */
+  background: #004488; /* CHANGÉ : Fond bleu foncé pour tout le corps */
   color: #222;
   line-height: 1.6;
 }
@@ -78,6 +78,7 @@ nav a:hover {
 
 .contact-links {
   display: flex;
+  color: #a5d0f3;
   flex-wrap: wrap;
   gap: 0.75rem;
 }
@@ -108,7 +109,7 @@ main > h1 {
   font-size: 2.5rem;
   text-transform: uppercase;
   margin-bottom: 0.2rem;
-  color: #0b2845;
+  color: #004488;
 }
 
 /* Tagline / Statut */
