--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  background: #004488; /* CHANGÉ : Fond bleu foncé pour tout le corps */
+  background: #1c4e80; /* CHANGÉ : Fond bleu foncé pour tout le corps */
   color: #222;
   line-height: 1.6;
 }
@@ -190,11 +190,12 @@ main h1 {
   margin-bottom: 1.5rem;
 }
 .contact-block li {
+  color: #66c7f4;
   font-size: 0.9rem;
   margin-bottom: 0.4rem;
 }
 .contact-block li a {
-  color: #fff; /* Liens en blanc dans la sidebar */
+  color: #66c7f4; /* Liens en bleu clair dans la sidebar */
   text-decoration: none;
 }
 .contact-block .contact-icon {
