--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  background: #1c4e80; /* CHANGÉ : Fond bleu foncé pour tout le corps */
+  background: #003d7b; /* CHANGÉ : Fond bleu foncé pour tout le corps */
   color: #222;
   line-height: 1.6;
 }
@@ -109,7 +109,7 @@ main > h1 {
   font-size: 2.5rem;
   text-transform: uppercase;
   margin-bottom: 0.2rem;
-  color: #004488;
+  color: #001327;
 }
 
 /* Tagline / Statut */
