--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ main h1 {
 
 /* Style des éléments d'expérience/formation/projet */
 .cv-item {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.0rem;
 }
 .cv-item h3 {
   font-size: 1.05rem;
@@ -299,7 +299,7 @@ footer {
   font-size: 0.85rem;
   padding: 1rem;
   color: #a5d0f3; /* Couleur de texte claire */
-  background: #0f3257; /* Couleur de fond foncée pour le footer */
+  background: #002954; /* Couleur de fond foncée pour le footer */
   margin-top: auto; /* Permet au footer d'être poussé vers le bas dans le flex container (.site-wrapper) */
 }
 
