--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,7 @@ main h1 {
   color: #fff; 
   border-bottom: 2px solid #fff; 
   margin-top: 1.5rem;
+  margin-bottom: 1.0rem;
 }
 .cv-sidebar h2:first-of-type {
   margin-top: 0;
@@ -279,10 +280,10 @@ main h1 {
 }
 .cv-photo {
   width: 100%;
-  max-width: 120px;
+  max-width: 160px;
   height: auto;
-  border: 3px solid #fff; 
-  border-radius: 50%;
+  border: 3px solid #114d89; 
+  border-radius: 4px;
   object-fit: cover;
 }
 
